--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "nuxt": "^2.4.0",
+    "nuxt-device-detect": "^1.1.5",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
