Update project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Samus",
+  "name": "FrameMeasure",
   "version": "1.0.0",
   "description": "My awesome Nuxt.js project",
   "author": "田畑颯",
