--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/google-adsense": "^1.1.3",
     "@nuxtjs/google-analytics": "^2.2.0",
     "bignumber.js": "^8.1.1",
     "cross-env": "^5.2.0",
